--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "mnapoli/front-yaml": "^1.6"
+        "mnapoli/front-yaml": "^1.6",
+        "slim/twig-view": "^2.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
