--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "flatmate",
-  "version": "1.0.0",
-  "description": "Flat-file CMS",
-  "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-      "dev": "npm run development",
-      "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-      "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-      "watch-poll": "npm run watch -- --watch-poll",
-      "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-      "prod": "npm run production",
-      "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-  },
-  "repository": {
-      "type": "git",
-      "url": "git+https://github.com/matthewbdaly/flatmate.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-      "url": "https://github.com/matthewbdaly/flatmate/issues"
-  },
-  "homepage": "https://github.com/matthewbdaly/flatmate#readme",
-  "devDependencies": {
-      "laravel-mix": "^2.1.11"
-  }
+    "name": "flatmate",
+    "version": "1.0.0",
+    "description": "Flat-file CMS",
+    "main": "index.js",
+    "directories": {
+        "test": "tests"
+    },
+    "scripts": {
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch-poll": "npm run watch -- --watch-poll",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/matthewbdaly/flatmate.git"
+    },
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/matthewbdaly/flatmate/issues"
+    },
+    "homepage": "https://github.com/matthewbdaly/flatmate#readme",
+    "devDependencies": {
+        "ajv": "^6.4.0",
+        "babel-preset-react": "^6.24.1",
+        "bootstrap": "^4.1.0",
+        "cross-env": "^5.1.4",
+        "jquery": "^3.3.1",
+        "laravel-mix": "^2.1.11",
+        "popper.js": "^1.14.3"
+    }
 }
