--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "slim/twig-view": "^2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.8 < 6.0"
+        "phpunit/phpunit": ">=4.8 < 6.0",
+        "psy/psysh": "^0.9.3"
     },
     "autoload-dev": {
         "psr-4": {
