--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0",
-        "psy/psysh": "^0.9.3"
+        "psy/psysh": "^0.9.3",
+        "satooshi/php-coveralls": "^2.0"
     },
     "autoload-dev": {
         "psr-4": {
