--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "mnapoli/front-yaml": "^1.6",
-        "slim/twig-view": "^2.3"
+        "slim/twig-view": "^2.3",
+        "symfony/console": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0",
